--- a/coding_interview/employee_dbms/index.html
+++ b/coding_interview/employee_dbms/index.html
@@ -22,6 +22,45 @@
         <div class="employees__single--info"></div>
       </div>
     </div>
+
+    <!-- Add Employee Code - START -->
+    <div class="addEmployee">
+      <form class="addEmployee_create">
+        Add a new Employee
+        <div>
+          <input
+            type="text"
+            name="firstName"
+            placeholder="First Name"
+            required
+          />
+          <input type="text" name="lastName" placeholder="Last Name" required />
+        </div>
+        <input type="text" name="imageUrl" placeholder="Image URL (Optional)" />
+        <input type="email" name="email" placeholder="Email" required />
+        <input
+          type="number"
+          name="contactNumber"
+          placeholder="Contact"
+          required
+        />
+        <input type="number" name="salary" placeholder="Salary" required />
+        <input type="text" name="address" placeholder="Address" required />
+        <input
+          type="date"
+          name="dob"
+          placeholder="Date of Birth"
+          class="addEmployee_create--dob"
+          required
+        />
+        <input
+          type="submit"
+          class="addEmployee_create--submit"
+          value="Submit"
+        />
+      </form>
+    </div>
+    <!-- Add Employee Code - END -->
     <link rel="stylesheet" href="./src/styles.css" />
     <script src="./src/index.js"></script>
   </body>
